if host_machine.system() == 'linux'
  rpi_h264_encoder = library('rpi_h264_encoder', [
    'module.cpp',
    #'rpi-webrtc-streamer/src/app_channel.cc', # needs websocket
    'rpi-webrtc-streamer/src/app_clientinfo.cc',
    #'rpi-webrtc-streamer/src/app_ws_client.cc', # needs websocket
    'rpi-webrtc-streamer/src/config_media.cc',
    'rpi-webrtc-streamer/src/config_motion.cc',
    'rpi-webrtc-streamer/src/config_streamer.cc',
    'rpi-webrtc-streamer/src/direct_socket.cc',
    # 'rpi-webrtc-streamer/src/file_log_sink.cc',
    'rpi-webrtc-streamer/src/file_writer_handle.cc',
    'rpi-webrtc-streamer/src/frame_queue.cc',
    'rpi-webrtc-streamer/src/log_rotating_stream.cc',
    #'rpi-webrtc-streamer/src/main.cc',
    #'rpi-webrtc-streamer/src/mdns_publish.c',
    'rpi-webrtc-streamer/src/mmal_util.c',
    'rpi-webrtc-streamer/src/mmal_video.c',
    'rpi-webrtc-streamer/src/mmal_video_reset.c',
    'rpi-webrtc-streamer/src/mmal_wrapper.cc',
    'rpi-webrtc-streamer/src/raspi_decoder.cc',
    'rpi-webrtc-streamer/src/raspi_decoder_dummy.cc',
    'rpi-webrtc-streamer/src/raspi_encoder.cc',
    'rpi-webrtc-streamer/src/raspi_encoder_impl.cc',
    #'rpi-webrtc-streamer/src/raspi_httpnoti.cc', # lot's of includes not in rtc_base
    'rpi-webrtc-streamer/src/raspi_motion.cc',
    'rpi-webrtc-streamer/src/raspi_motionblob.cc',
    'rpi-webrtc-streamer/src/raspi_motionfile.cc',
    'rpi-webrtc-streamer/src/raspi_motionvector.cc',
    'rpi-webrtc-streamer/src/raspi_quality_config.cc',
    'rpi-webrtc-streamer/src/raspicamcontrol.c',
    'rpi-webrtc-streamer/src/raspicli.c', # command line interface
    'rpi-webrtc-streamer/src/raspipreview.c',
    'rpi-webrtc-streamer/src/session_config.cc',
    'rpi-webrtc-streamer/src/streamer.cc',
    'rpi-webrtc-streamer/src/streamer_signaling.cc',
    'rpi-webrtc-streamer/src/utils.cc',
    'rpi-webrtc-streamer/src/utils_pc_config.cc',
    'rpi-webrtc-streamer/src/utils_pc_strings.cc',
    #'rpi-webrtc-streamer/src/websocket_server.cc',
    #'rpi-webrtc-streamer/src/websocket_server_callback.cc',
    #'rpi-webrtc-streamer/src/websocket_server_util.c',
    'rpi-webrtc-streamer/src/wstreamer_types.cc',
    'rpi-webrtc-streamer/src/compat/optionsfile.cc',
    ],
    cpp_args: ['-Wno-unused-parameter', '-Wno-variadic-macros',
      '-Wno-unused-private-field', '-Wno-unused-const-variable',
      '-Wno-deprecated-declarations', '-Wno-range-loop-construct',
      '-Wno-implicit-const-int-float-conversion',
      '-DINSTALL_DIR="INSTALL_DIR_NOT_IMPL"',
      '-D__RWS_VERSION__="RWS_VERSION_NOT_IMPL"',
      '-D__WEBRTC_VERSION__="WEBRTC_VERSION_NOT_IMPL"',
      ],
    override_options: ['cpp_std=c++14'],
    include_directories: ['/home/mlanner/Development/projects/fubble/rpi-sysroot-armv7/opt/vc/include/',
      'rpi-webrtc-streamer/src'
      ],
    dependencies: [google_webrtc_dep, webrtc_peer_dep],
    )
  rpi_h264_encoder_dep = declare_dependency(
    link_with: [rpi_h264_encoder],
    dependencies: [webrtc_google_peer_dep],
    include_directories: ['rpi-webrtc-streamer/src'],
    link_args: [
      '-L/home/mlanner/Development/projects/fubble/rpi-sysroot-armv7/opt/vc/lib/',
      '-lbcm_host',
      '-lbrcmEGL',
      '-lbrcmGLESv2',
      '-lbrcmOpenVG',
      '-lbrcmWFC',
      '-lcontainers',
      '-ldebug_sym',
      '-ldebug_sym_static',
      '-ldtovl',
      '-lEGL_static',
      '-lelftoolchain',
      '-lGLESv2_static',
      '-lkhrn_client',
      '-lkhrn_static',
      '-lmmal_components',
      '-lmmal_core',
      '-lmmal',
      '-lmmal_util',
      '-lmmal_vc_client',
      '-lopenmaxil',
      '-lvchiq_arm',
      '-lvchostif',
      '-lvcilcs',
      '-lvcos',
      '-lvcsm',
      ],
    )
else
  rpi_h264_encoder_dep = declare_dependency()
endif


